# kyc-apt-transport

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: release.yml
apt-repo/: build.sh
assets/: kyc-keyring.gpg  kyc.list
debian/: postinst  postrm  prerm
src/: device_flow.rs  lib.rs  license_store.rs  protocol.rs
