[package]
name = "apt-transport-kyc"
version = "0.1.0"
edition = "2024"
# Public OSS crate. MIT/Apache-2.0 is the conventional dual-license
# for Rust crates and lets downstream packagers redistribute the
# transport binary in their own repos without friction.
license = "MIT OR Apache-2.0"
description = "APT transport method binary + RFC 8628 device-flow client for kyc"
repository = "https://github.com/know-your-code/kyc-apt-transport"
keywords = ["apt", "debian", "kyc"]
categories = ["command-line-utilities"]

[lib]
name = "apt_transport_kyc"

[[bin]]
name = "apt-transport-kyc"
path = "src/bin/apt-transport-kyc.rs"

# Feature gating for the optional browser-launcher dep. The library
# half is consumed by kyc-cli (which enables `cli-ui` so the SSO
# command can pop a browser tab) and by the apt-method binary in
# this crate (which never launches a browser — apt's UI doesn't
# benefit from it).
[features]
default = []
cli-ui = ["dep:webbrowser"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
webbrowser = { version = "1", optional = true }
# Used by license_store for getpwnam + chown. The passwd struct
# layout differs on macOS vs glibc vs musl, so hand-rolling FFI here
# is fragile — libc gives us the right layout per target for free.
libc = "0.2"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"

# cargo-deb metadata. Packages the apt-method binary ONLY. The .deb
# drops it at /usr/lib/apt/methods/kyc; apt auto-discovers the
# `kyc://` URL scheme by filename (the filename and the scheme must
# match — that's why we use `kyc://` and not the compound form
# `kyc+https://`, which would need `methods/kyc+https`).
#
# We deliberately do NOT bundle the GPG keyring or write a sources
# file from postinst — the install flow at knowyourco.de/download
# follows Docker's pattern (user curls the key into
# /etc/apt/keyrings/, then writes /etc/apt/sources.list.d/kyc.sources
# with `tee`). This keeps the .deb minimal and the install path
# explicit + auditable.
[package.metadata.deb]
name = "apt-transport-kyc"
maintainer = "Botanica Software Labs <hello@knowyourco.de>"
copyright = "2026, Botanica Software Labs"
depends = "libc6, ca-certificates"
section = "admin"
priority = "optional"
extended-description = """\
Adds the kyc:// URL scheme to apt. Required by the kyc apt source to
fetch license-gated packages with an Authorization: Kyc-License
bearer credential. See knowyourco.de/download for the full install
flow (key trust + sources.list registration)."""
assets = [
    ["target/release/apt-transport-kyc", "usr/lib/apt/methods/kyc", "755"],
]
